@@ -12,7 +12,11 @@ public class OAuth2AccessTokenErrorResponse extends OAuthException {
     private static final long serialVersionUID = 2309424849700276816L;
 
     public enum ErrorCode {
-        invalid_request, invalid_client, invalid_grant, unauthorized_client, unsupported_grant_type, invalid_scope
+        invalid_request, invalid_client, invalid_grant, unauthorized_client, unsupported_grant_type, invalid_scope,
+        /**
+         * @see <a href="https://tools.ietf.org/html/rfc7009#section-2.2.1">RFC 7009, 2.2.1. Error Response</a>
+         */
+        unsupported_token_type
     }
 
     private final ErrorCode errorCode;
