@@ -6,6 +6,7 @@
  * switch to use HTTP Basic Authorization by default in requests with need of
    (2.3.  Client Authentication) https://tools.ietf.org/html/rfc6749#section-2.3 Can be overrided in API class
  * add support for client_credentials grant type (thanks to https://github.com/vivin)
+ * add support for RFC 7009 OAuth 2.0 Token Revocation (thanks to https://github.com/vivin)
 
 [4.2.0]
  * DELETE in JdkClient permits, but not requires payload (thanks to https://github.com/miguelD73)
